--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
 	<meta charset="utf-8">
-	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+	<title>GhostFox</title>
 
 <!-- Metadata -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +9,10 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 <!-- Stylesheets -->
-	<link rel="stylesheet" href="{{ "/assets/styles/cauldron.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="{{ "/assets/styles/main.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" type="text/css" href="/assets/styles/main.css">
+	<link rel="stylesheet" href="{{ "/assets/css/cauldron.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/mlba/assets/css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/about/assets/css/main.css" | prepend: site.baseurl }}">
 
 <!-- JavaScript -->
 	<script src="{{ "/assets/scripts/jquery.min.js" | prepend: site.baseurl }}"></script>
