--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,9 +11,8 @@ body {
 
 .bigblock {
 	position: absolute;
-	left: 50%;
-	top: 50%;
-	margin: -350px 0 0 -400px;
+	padding-left: 400px;
+	padding-top: 20px;
 	height: 100%;
 	width: 850px;
 }
@@ -22,8 +21,8 @@ body {
 	border: solid;
 	border-color: #e2e2e2;
 	border-width: 3px;
-	width: 200px;
-	height: 200px;
+	width: 150px;
+	height: 150px;
 	border-radius: 10px;
 	box-shadow: 10px 10px 10px #e2e2e2;	
 	display: inline-block;
@@ -68,6 +67,6 @@ a {
 }
 .aboutmain:hover {
 	background-image: url(/assets/images/pasfoto.jpg); 
-	background-size: 200px 200px;
+	background-size: 150px 150px;
 }
 
