Borderfix, focusfix, headerfix

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,9 +5,9 @@
 
   </head>
   
-  <body class="about">
+  <body>
       
-    {% include header.html %}
+    {% include headerabout.html %}
 
     <div class="page-content">
         {{ content }}
