--- a/_layouts/mlba.html
+++ b/_layouts/mlba.html
@@ -6,11 +6,11 @@
   </head>
   
   <body class="mlba">
-      
+
     {% include header.html %}
 
-    <div class="page-content">
-        {{ content }}
+    <div class="content">
+       {{ content }}
     </div>
 
 
