--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,9 +10,9 @@ body {
 }
 
 .bigblock {
-	position: absolute;
-	padding-left: 400px;
-	padding-top: 20px;
+	margin-left: auto;
+    margin-right: auto;
+    text-align:center;
 	height: 100%;
 	width: 850px;
 }
